# IRPF-analyzer

./: .gitignore  README.md  pyproject.toml
src/irpf_analyzer/: __init__.py  __main__.py
src/irpf_analyzer/cli/: __init__.py  app.py  console.py
src/irpf_analyzer/cli/commands/: __init__.py
src/irpf_analyzer/core/: __init__.py
src/irpf_analyzer/core/analyzers/: __init__.py  advanced_patterns.py  autonomous_professional.py  comparison.py  consistency.py  cross_validation.py  cryptocurrency.py  deductions.py  dependent_fraud.py  estate_planning.py  expatriate.py  income.py  investment_optimization.py  legislation_alerts.py  optimization.py  patterns.py  risk.py  specific_cross_validations.py  temporal.py
src/irpf_analyzer/core/models/: __init__.py  alienation.py  analysis.py  checklist.py  comparison.py  declaration.py  deductions.py  dependents.py  enums.py  income.py  patrimony.py
src/irpf_analyzer/core/rules/: __init__.py  tax_constants.py
src/irpf_analyzer/core/services/: __init__.py  checklist_generator.py
src/irpf_analyzer/infrastructure/: __init__.py
src/irpf_analyzer/infrastructure/parsers/: __init__.py  dbk_parser.py  dec_parser.py  detector.py
src/irpf_analyzer/infrastructure/reports/: __init__.py  pdf_generator.py
src/irpf_analyzer/shared/: __init__.py  exceptions.py  formatters.py  statistics.py  validators.py
tests/: __init__.py  conftest.py
tests/unit/: test_advanced_patterns.py  test_analyzers.py  test_autonomous_professional.py  test_cross_validation.py  test_cryptocurrency.py  test_dependent_fraud.py  test_estate_planning.py  test_expatriate.py  test_income_analyzer.py  test_investment_optimization.py  test_legislation_alerts.py  test_models.py  test_optimization.py  test_parser.py  test_patterns.py  test_specific_cross_validations.py  test_statistics.py  test_temporal.py  test_validators.py
